styles/styles.css
@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/ptsans-400.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/ptsans-700.woff2") format("woff2");
  font-display: swap;
}

:root {
  --padding-index-inline: 258px;
  --color-font-basic: #000000;
  --color-font-basic-hover: #756157;
  --color-font-basic-active: rgba(117, 97, 87, 0.3);
  --color-font-second: #333333;
  --color-font-bgnd: #ffffff;
  --color-font-bgnd-hover: rgba(255, 255, 255, 0.6);
  --color-font-bgnd-active: rgba(255, 255, 255, 0.3);
  --color-font-bgnd-disabled: rgba(255, 255, 255, 0.1);
  --color-font-error: #ff5757;
  --color-bgnd-basic: #ffffff;
  --color-bgnd-basic-hover: rgba(255, 255, 255, 0.6);
  --color-bgnd-basic-active: rgba(255, 255, 255, 0.3);
  --color-bgnd-basic-dark: #f2f2f2;
  --color-bgnd-basic-dark-hover: #e6e6e6;
  --color-bgnd-second-opaque: #82b3d3;
  --color-bgnd-second-opaque-semi: rgba(131, 179, 211, 0.2);
  --color-bgnd-second-opaque-light: rgba(131, 179, 211, 0.12);
  --color-bgnd-image: #708ea1;
  --color-bgnd-tooltip: #333333;
  --color-btn-basic: #756157;
  --color-btn-basic-hover: #615048;
  --color-btn-util: #82b3d3;
  --color-btn-util-2: #83b3d3;
  --color-btn-util-hover: #68a2ca;
  --color-btn-active: #7db54f;
  --color-btn-active-hover: #6c9e42;
  --color-btn-disabled: #e5e5e5;
  --color-btn-form: #f2f2f2;
  --color-btn-form-hover: #e6e6e6;
  --color-icon-basic: #000000;
  --color-icon-basic-hover: #756157;
  --color-icon-basic-active: rgba(117, 97, 87, 0.3);
  --color-icon-basic-bgnd-active: rgba(0, 0, 0, 0.2);
  --color-icon-basic-bgnd-active-2: rgba(0, 0, 0, 0.3);
  --color-icon-second: #83b3d3;
  --color-icon-second-hover: #68a2ca;
  --color-icon-second-active: rgba(104, 162, 202, 0.3);
  --color-icon-text: #7db54f;
  --color-icon-text-hover: #6c9e42;
  --color-form: #3f5e72;
  --color-brdr-basic: #000000;
  --color-brdr-catalog-1: #e5e5e5;
  --color-brdr-catalog-1-hover: #68a2ca;
  --color-brdr-catalog-2: #e6e6e6;
  --color-brdr-text: #756257;
  --color-brdr-pagination: #82b3d3;
  --color-brdr-tile: rgba(0, 0, 0, 0.3);
  --color-brdr-tile-opaque: rgba(255, 255, 255, 0.3);
  --color-brdr-thumb: #83b3d3;
  --color-shadow-page: rgba(0, 0, 0, 0.2);
  --color-shadow-modal: rgba(0, 0, 0, 0.15);
  --color-shadow-thumb-hover: rgba(0, 0, 0, 0.25);
  --color-shadow-thumb-active: rgba(0, 0, 0, 0.4);
  --color-shadow-tooltip: rgba(0, 0, 0, 0.3);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0;
  font-family: "PT Sans", sans-serif;
  font-size: 18px;
  line-height: 21px;
  color: var(--color-font-second);
  background-color: var(--color-bgnd-basic-dark);
}

.visually-hidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  clip-path: inset(100%);
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  white-space: nowrap;
  border: 0;
}

/* Page-container */
.page-container {
  display: flex;
  flex-direction: column;
  width: 1200px;
  min-height: 100%;
  margin: 0 auto;
  background-color: var(--color-bgnd-basic);
  box-shadow: 0 0 15px var(--color-shadow-page);
}

/* Header */
.page-header {
  z-index: 1;
  padding: 0 70px;
}

.nav {
  display: flex;
  align-items: flex-start;
}

.nav__logo {
  margin-right: 28px;
  margin-bottom: -6px;
}

.nav__logo:hover .nav__img,
.nav__logo:focus-visible .nav__img {
  filter: sepia(100%);
}

.nav__logo:active .nav__img {
  filter: sepia(0);
}

.nav__img {
  display: block;
}

.nav__list,
.nav__user {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav__list {
  min-width: 340px;
  margin-right: auto;
}

.nav__item {
  padding: 6px;
}

.nav__link {
  display: block;
  padding: 14px 10px;
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  text-decoration: none;
  color: var(--color-font-basic);
}

.nav__link--current::after {
  --thickness-brdr-text: 2px;
  content: "";
  display: block;
  width: calc(100% - var(--thickness-brdr-text));
  margin: 0 auto;
  box-shadow: 0 20px 0 calc(var(--thickness-brdr-text) / 2) var(--color-brdr-text);
}

.nav__link[href]:hover,
.nav__link:focus-visible {
  color: var(--color-font-basic-hover);
}

.nav__link[href]:active {
  color: var(--color-font-basic-active);
}

.nav__user {
  justify-content: flex-end;
  min-width: 88px;
  margin: 0 20px;
}

.nav__user-item {
  min-width: 44px;
  height: 64px;
  padding: 6px 4px;
}

.nav__user-link {
  display: flex;
  height: 100%;
  text-decoration: none;
}

.nav__user-link::before {
  content: "";
  width: 20px;
  height: 20px;
  margin: auto;
  background-color: var(--color-icon-basic);
  -webkit-mask: center / contain no-repeat;
  mask: center / contain no-repeat;
}

.nav__user-link--search::before {
  -webkit-mask-image: url("../images/icons-search.svg");
  mask-image: url("../images/icons-search.svg");
}

.nav__user-link--favorite {
  display: grid;
}

.nav__user-link--favorite::before {
  grid-area: 1 / 1 / 2 / 2;
  margin-left: 8px;
  -webkit-mask-image: url("../images/icons-favorite.svg");
  mask-image: url("../images/icons-favorite.svg");
}

.nav__user-link:hover::before,
.nav__user-link:focus-visible::before {
  background-color: var(--color-icon-basic-hover);
  transform: scale(1.4);
}

.nav__user-link:active::before {
  background-color: var(--color-icon-basic);
}

.nav__favorites {
  z-index: 1;
  display: inline-block;
  grid-area: 1 / 1 / 2 / 2;
  align-self: start;
  min-width: 20px;
  margin-top: 5px;
  margin-left: 16px;
  padding: 5px 4px;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
  color: var(--color-font-bgnd);
  background-color: var(--color-icon-text);
  border-radius: 10px;
}

.nav__user-link:hover .nav__favorites,
.nav__user-link:focus-visible .nav__favorites {
  background-color: var(--color-icon-text-hover);
}
/* ... */

